# PipeRDC

./: .SRCINFO  .gitignore  CMakeLists.txt  Makefile  PKGBUILD  README.md  pyproject.toml  requirements.txt
cmake/: piperdc-wrapper.in
data/: piperdc.desktop
flatpak/: org.piperdc.PipeRDC.yml
packaging/aur/: .SRCINFO  PKGBUILD
packaging/deb/DEBIAN/: control
packaging/rpm/: piperdc.spec
pkg/flathub/: README.md  org.piperdc.PipeRDC.appdata.xml  org.piperdc.PipeRDC.yml
src/: __main__.py  main.py
src/models/: connection.py
src/services/: config_manager.py  credential_manager.py  rdp_launcher.py
src/ui/: connection_dialog.py  monitor_selector.py  window.py
src/utils/: rdp_parser.py
