[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "piperdc"
version = "1.0.0"
description = "A modern RDP Connection Manager for Linux"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["rdp", "remote-desktop", "xfreerdp", "connection-manager"]

[project.scripts]
piperdc = "src.main:main"

[project.gui-scripts]
piperdc = "src.main:main"